# Atmospheric-Scattering

./: .gitignore  CMakeLists.txt  Readme.md
licenses/: RAY-MMD.txt
resources/Skybox/: BRDF.tga
resources/WaterFlow/: BasicColumnScene.x
shaders/: AreaShadow.glsl  BasicCascadeShader.glsli  BlitShadowPS.glsl  BlitShadowVS.glsl  BlitTexture.glsl  Common.glsli  Cubemap.glsl  DebugDepth.glsl  Depth.glsl  DepthLight.glsl  DepthLtc.glsl  EncodeNormal.glsli  EquirectangularToCubemap.glsl  Flat.glsl  Gbuffer.glsl  Gbuffer.glsli  GroundTruth.glsl  Lighting.glsl  LightingPS.glsl  LightingVS.glsl  LinearDepth.glsli  Ltc.glsl  Math.glsli  Nishita.glsl  ParallaxPS.glsl  ParallaxVS.glsl  PhaseFunctions.glsli  PostProcessHDR.glsl  Scattering.Fragment  Scattering.Vertex  Scattering.glsl  ScreenSpaceQuadVS.glsl  ShadingOpacityPS.glsl  ShadowMapPS.glsl  ShadowMapVS.glsl  Skybox.glsli  Skycube.glsl  System.conf  TexturedLight.glsl  ToneMappingUtility.glsli
shaders/BasicTechnique/: SkyboxFS.glsl  SkyboxVS.glsl  Skycube.glsl  Water.glsl
shaders/Helipad GoldenHour/: EnvLightingPS.glsl  EnvLightingVS.glsl  Sky with box.conf  Sky with box.glsl
shaders/IBL/: BrdfLut.glsl  Constants.glsli  Ibl.glsli  IblMesh.glsl  Irradiance.glsl  Prefilter.glsl  Radiance.glsl  Sampling.glsli
shaders/Time of day/: LINCENSE  Time of day.Fragment  Time of day.Vertex  Time of day.conf
shaders/Time of night/: Moon.Fragment  Moon.Vertex  Stars.Fragment  Stars.Vertex  Time of night.Fragment  Time of night.Vertex  Time of night.conf
src/: Atmosphere.cpp  Atmosphere.h  Atmosphere2.cpp  Atmosphere2.h  BaseMaterial.cpp  BaseMaterial.h  BaseMesh.cpp  BaseMesh.h  BufferManager.cpp  BufferManager.h  GameCore.cpp  GameCore.h  GraphicsContext.cpp  GraphicsContext.h  GraphicsTypes.h  Light.cpp  Light.h  LightingTechnique.cpp  LightingTechnique.h  Mesh.cpp  Mesh.h  ModelAssImp.cpp  ModelAssImp.h  PhaseFunctions.cpp  PhaseFunctions.h  SceneSettings.h  ShadowTechnique.cpp  ShadowTechnique.h  SkyBox.cpp  SkyBox.h  Skydome.cpp  Skydome.h  Types.h  main.cpp
src/BasicTechnique/: SkyboxTechnique.cpp  WaterTechnique.h  (+4 more)
(+69 files in other folders)
